feat: add loader

--- a/src/index.css
+++ b/src/index.css
@@ -21,12 +21,19 @@ article, aside, canvas, details, embed,
 figure, figcaption, footer, header, hgroup,
 menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
+  font-family: 'Poppins', sans-serif;
   margin: 0;
 	padding: 0;
 	border: 0;
 	font-size: 100%;
 	font: inherit;
 	vertical-align: baseline;
+}
+
+@layer base {
+  html {
+    font-family: 'Poppins', sans-serif;
+  }
 }
 
 /* make sure to set some focus styles for accessibility */
