--- a/src/index.css
+++ b/src/index.css
@@ -36,6 +36,12 @@ time, mark, audio, video {
   }
 }
 
+@layer components {
+  .cut-shape {
+    clip-path: polygon(20% 0%, 80% 0%, 100% 20%, 100% 80%, 100% 100%, 20% 100%, 0% 80%, 0 0);
+  }
+}
+
 /* make sure to set some focus styles for accessibility */
 :focus {
     outline: 0;
